[WIP] simple user authentication I.
